@@ -5,15 +5,18 @@ module Test::Spec::Rails::ShouldRender
   # Test that a specific template was rendered:
   #   request.should.render 'foo'
   #
-  def render(template = '')
-    @object.assert_response :success
+  # Test that a template was rendered with a specific response code:
+  #   request.should.render 'foo', :error
+  #
+  def render(template = '', response = :success)
+    @object.assert_response response
     @object.assert_template template unless template.blank?
   end
 end
 
 module Test::Spec::Rails::ShouldNotRender
   # Test that we didn't render
-  def redirect(template = '')
+  def render(template = '', response = :success)
     @object.assert_response :redirect # TODO: fix me
   end
 end
